# default-controller.go
@@ -81,11 +81,6 @@ func ReceiveJSON(c *fiber.Ctx) error {
 	return c.Status(fiber.StatusOK).JSON(response)
 }
 
-// @Summary Returns a hello message
-// @Description Responds with a simple hello message
-// @Produce json
-// @Success 200 {object} Response
-// @Router /hello [get]
 func HelloCheck(c *fiber.Ctx) error {
 	response := Response{
 		Success: true,
@@ -95,11 +90,6 @@ func HelloCheck(c *fiber.Ctx) error {
 	return c.Status(fiber.StatusOK).JSON(response)
 }
 
-// @Summary Returns an error message
-// @Description Responds with a test error message
-// @Produce json
-// @Success 400 {object} Response
-// @Router /error [get]
 func ErrorCheck(c *fiber.Ctx) error {
 	response := Response{
 		Success: false,
